--- a/MauiAppHotel/MainPage.xaml
+++ b/MauiAppHotel/MainPage.xaml
@@ -15,6 +15,8 @@
 
             <Label
                 Text="Hello, World!"
+                FontFamily="Kalam-Regular"
+                
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
 
