--- a/MauiAppHotel/Resources/Styles/Colors.xaml
+++ b/MauiAppHotel/Resources/Styles/Colors.xaml
@@ -6,8 +6,29 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
-    <Color x:Key="Primary">#512BD4</Color>
-    <Color x:Key="PrimaryDark">#ac99ea</Color>
+
+
+
+    
+   
+
+    <!-- Tema Escuro -->
+    <Color x:Key="PrimaryDark">#BB86FC </Color>
+    <Color x:Key="BackgroundDark">#121212</Color>
+    <Color x:Key="TextDark">#E0E0E0 </Color>
+    <Color x:Key="Gray100Dark">#1E1E1E </Color>
+    <Color x:Key="ButtonDark">#3700B3 </Color>
+
+    <!-- Definindo cores de texto com base no tema -->
+    <Color x:Key="TextPrimaryDark">#FFFFFF</Color>
+    <Color x:Key="TextSecondaryDark">#A1A1A1</Color>
+    
+    
+
+    <Color x:Key="Verde">Green</Color>
+
+    <Color x:Key="Primary">#512BD4 </Color>
+    
     <Color x:Key="PrimaryDarkText">#242424</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
