--- a/MauiAppHotel/Views/Sobre.xaml
+++ b/MauiAppHotel/Views/Sobre.xaml
@@ -6,7 +6,7 @@
              BackgroundColor="{StaticResource Gray100}">
 
 
-
+    <ScrollView>
     <VerticalStackLayout>
 
        
@@ -20,7 +20,7 @@
 
             <StackLayout Orientation="Vertical" Spacing="10" Padding="10">
 
-                <Image  Source="foto1.jpg" 
+                <Image  Source="foto3.jpg" 
                             Aspect="AspectFill"
                             Opacity="1"/>
                 <Label Text=" Unidade 1.Pernambuco próximo a Porto de Galinhas: Uma das praias mais famosas do litoral sul. " TextColor="Black" FontSize="Body" LineBreakMode="CharacterWrap"/>
@@ -46,7 +46,7 @@ com mais duas unidades no Ceara
         </Frame>
 
     </VerticalStackLayout>
-    
-    
+
+    </ScrollView>
 
 </ContentPage>
