--- a/MauiAppHotel/Views/Fotos.xaml
+++ b/MauiAppHotel/Views/Fotos.xaml
@@ -3,30 +3,168 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.Fotos"
              Title="Fotos">
-    <VerticalStackLayout>
-        <Label 
-            Text="Quartos" FontSize="Header"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <!--<ScrollView>
+        <VerticalStackLayout Padding="10" Spacing="10" HorizontalOptions="Center">-->
 
-       
-       
+            <!-- Primeira Linha --><!--
+            <HorizontalStackLayout Spacing="10" HorizontalOptions="Center">
+                <Image Source="luxo1.jpg" HeightRequest="120" WidthRequest="120" />
+                <Image Source="luxo2.jpg" HeightRequest="120" WidthRequest="120" />
+                <Image Source="luxo3.jpg" HeightRequest="120" WidthRequest="120" />
+            </HorizontalStackLayout>
 
-        <Frame Margin="10">
+            --><!-- Segunda Linha --><!--
+            <HorizontalStackLayout Spacing="10" HorizontalOptions="Center">
+                <Image Source="simple1.jpg" HeightRequest="120" WidthRequest="120" />
+                <Image Source="simples2.jpg" HeightRequest="120" WidthRequest="120" />
+                <Image Source="simples3.jpg" HeightRequest="120" WidthRequest="120" />
+            </HorizontalStackLayout>
 
-            <StackLayout Orientation="Horizontal">
+            --><!-- Terceira Linha --><!--
+            <HorizontalStackLayout Spacing="10" HorizontalOptions="Center">
+                <Image Source="economico1.jpg" HeightRequest="120" WidthRequest="120" />
+                <Image Source="economico2.jpg" HeightRequest="120" WidthRequest="120" />
+                <Image Source="economico3.jpg" HeightRequest="120" WidthRequest="120" />
+            </HorizontalStackLayout>-->
 
-            
+            <!--<Grid Padding="20" RowSpacing="10" ColumnSpacing="10">
 
-                <Image Source="Resources/Images/foto3.jpg" WidthRequest="100" HeightRequest="700"/>
+                --><!-- Definindo 3 colunas --><!--
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
+                --><!-- Definindo várias linhas --><!--
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                --><!-- Primeira Linha --><!--
+                <Image Grid.Row="0" Grid.Column="0" Source="luxo1.jpg" HeightRequest="100" WidthRequest="100"  Aspect="AspectFill"/>
+                <Image Grid.Row="0" Grid.Column="1" Source="luxo2.jpg" HeightRequest="100" WidthRequest="100"  Aspect="AspectFill"/>
+                <Image Grid.Row="0" Grid.Column="2" Source="luxo3.jpg" HeightRequest="100" WidthRequest="100"  Aspect="AspectFill"/>
+
+                --><!-- Segunda Linha --><!--
+                <Image Grid.Row="1" Grid.Column="0" Source="economico1.jpg" HeightRequest="100" WidthRequest="100"  Aspect="AspectFill"/>
+                <Image Grid.Row="1" Grid.Column="1" Source="economico2.jpg" HeightRequest="100" WidthRequest="100"  Aspect="AspectFill"/>
+                <Image Grid.Row="1" Grid.Column="2" Source="economico3.jpg" HeightRequest="100" WidthRequest="100"  Aspect="AspectFill"/>
+
+                --><!-- Terceira Linha --><!--
+                <Image Grid.Row="2" Grid.Column="0" Source="simple1.jpg" HeightRequest="100" WidthRequest="100"  Aspect="AspectFill"/>
+                <Image Grid.Row="2" Grid.Column="1" Source="simples2.jpg" HeightRequest="100" WidthRequest="100"  Aspect="AspectFill"/>
+                <Image Grid.Row="2" Grid.Column="2" Source="simples3.jpg" HeightRequest="100" WidthRequest="100"  Aspect="AspectFill"/>
+            </Grid>
+           
+        </VerticalStackLayout>
+        
+        
+    </ScrollView>-->
+    <ScrollView>
+        <!-- Grid para organizar as imagens e textos -->
+        <Grid Padding="20" RowSpacing="20" ColumnSpacing="20">
+
+            <!-- Definindo 3 colunas -->
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <!-- Definindo 5 linhas -->
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <!-- Primeira Linha -->
+            <StackLayout Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="luxo1.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="LUXO" HorizontalOptions="Center" />
             </StackLayout>
-            
+            <StackLayout Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="luxo2.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="LUXO " HorizontalOptions="Center" />
+            </StackLayout>
+            <StackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="luxo3.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="LUXO" HorizontalOptions="Center" />
+            </StackLayout>
 
-        </Frame>
+            <!-- Segunda Linha -->
+            <StackLayout Grid.Row="1" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="simple1.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="SIMPLES" HorizontalOptions="Center" />
+            </StackLayout>
+            <StackLayout Grid.Row="1" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="simples2.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="SIMPLES" HorizontalOptions="Center" />
+            </StackLayout>
+            <StackLayout Grid.Row="1" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="simples3.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="SIMPLES" HorizontalOptions="Center" />
+            </StackLayout>
+
+            <!-- Terceira Linha -->
+            <StackLayout Grid.Row="2" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="economico1.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="ECONÕMICO" HorizontalOptions="Center" />
+            </StackLayout>
+            <StackLayout Grid.Row="2" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="economico2.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="ECONÕMICO" HorizontalOptions="Center" />
+            </StackLayout>
+            <StackLayout Grid.Row="2" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="economico3.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="ECONÕMICO" HorizontalOptions="Center" />
+            </StackLayout>
+
+            <!-- Quarta Linha -->
+            <StackLayout Grid.Row="3" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="crianca1.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFit" />
+                <Label Text="CRIANÇAS" HorizontalOptions="Center" />
+            </StackLayout>
+            <StackLayout Grid.Row="3" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="crianca2.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="CRIANÇAS" HorizontalOptions="Center" />
+            </StackLayout>
+            <StackLayout Grid.Row="3" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="crianca3.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="CRIANÇAS" HorizontalOptions="Center" />
+            </StackLayout>
+
+            <!-- Quinta Linha -->
+            <StackLayout Grid.Row="4" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="comida1.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="REFEIÇÃO" HorizontalOptions="Center" />
+            </StackLayout>
+            <StackLayout Grid.Row="4" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="comida2.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFill" />
+                <Label Text="REFEIÇÃO" HorizontalOptions="Center" />
+            </StackLayout>
+            <StackLayout Grid.Row="4" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Center">
+                <Image Source="comida2.jpg" HeightRequest="100" WidthRequest="100" Aspect="AspectFit" />
+                <Label Text="REFEIÇÃO" HorizontalOptions="Center" />
+            </StackLayout>
+
+        </Grid>
+    </ScrollView>
+
+    <!--<Button Text="Avançare" TextColor="Black" BackgroundColor="{StaticResource Gray400}"/>-->
+     
 
 
-    </VerticalStackLayout>
 
-   
+           
+
+
+
+
+
 </ContentPage>
